--- a/css/main.css
+++ b/css/main.css
@@ -1243,7 +1243,7 @@ header .social-links ul li a:focus {
  * ------------------------------------------------------------------- */
 #info {
 	background: #FFFFFF;
-	background-image: url(../images/info-bg.jpg);
+	background-image: ;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center;
